kubernetes/base-services/mlflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: ml-platform
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: mlflow
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-external
  namespace: ml-platform
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: mlflow
